--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<!-- No local stylesheet -->
 </head>
 <body>
     <div id="root" class="h-full w-full"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
