--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 </head>
 <body>
     <div id="root" class="h-full w-full"></div>
-    <script type="module" src="./dist/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
