--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.1.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "leaflet": "https://esm.sh/leaflet@^1.9.4",
-    "react/": "https://esm.sh/react@^19.1.0/"
+    "react": "https://esm.sh/react@19.1.0",
+    "react-dom/": "https://esm.sh/react-dom@19.1.0/",
+    "leaflet": "https://esm.sh/leaflet@1.9.4",
+    "react/": "https://esm.sh/react@19.1.0/"
   }
 }
 </script>
